# paper-read-workflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  SKILL.md  config.yaml.example  notion_schema.yaml  pyproject.toml
.claude/: settings.json
.claude/hooks/: auto-commit.sh
.claude/skills/commit/: SKILL.md
.claude/skills/paper-reading-workflow/: SKILL.md
backends/: README.md
backends/lark/: backend.yaml
backends/notion/: backend.yaml.example
prompts/: analyzer.md  classifier.md  summarizer.md
reference/: latex-failure-patterns.md  notion-properties.md
scripts/: _figure_extractor.py  _lib.py  _table_extractor.py  add_paper.sh  analyze.py  create_notion_db.py  create_test_db.py  download.py  extract_text.py  extract_visuals.py  find_alphaxiv_api.py  migrate_papers.py  notion_check.py  notion_write.py  rank_by_likes.py  translate_captions.py
skill/: SKILL.md
skill/assets/prompts/: analyzer.md  (+1 more)
skill/references/: latex-failure-patterns.md  notion-properties.md  paths.md
skill/scripts/: _backend_config.py  _env_writer.py  _figure_extractor.py  _lib.py  _render_repair.py  _table_extractor.py  classify.py  debug_render.py  extract_visuals.py  lark_write.py  notion_check.py  notion_write.py  summarize.py
src/paper_tool/: __init__.py  citation_refresh.py  citations.py  cli.py  config.py  figure_extractor.py  llm_analyzer.py  llm_chat.py  llm_classifier.py  llm_stream.py  llm_summarizer.py  logging_setup.py  models.py  notion_service.py  notion_setup.py  pdf_parser.py  pipeline.py  retry.py  server.py  table_extractor.py
(+62 files in other folders)
